pal/outputs/penguins_in_a_table_Java.txt
  0%|          | 0/149 [00:00<?, ?it/s]  1%|          | 1/149 [00:25<1:02:12, 25.22s/it]  1%|▏         | 2/149 [00:33<37:41, 15.38s/it]    2%|▏         | 3/149 [01:26<1:19:10, 32.54s/it]  3%|▎         | 4/149 [01:37<57:30, 23.80s/it]    3%|▎         | 5/149 [02:27<1:19:48, 33.25s/it]21670be8-27e7-11f0-8aba-e10f5b0b7eea/Solution.java:19: error: array required, but Object found
        penguins.sort(Comparator.comparingInt(x -> Integer.parseInt(x[2])).reversed());
                                                                     ^
1 error
  4%|▍         | 6/149 [02:29<54:36, 22.91s/it]    5%|▍         | 7/149 [02:37<42:33, 17.98s/it]  5%|▌         | 8/149 [03:26<1:05:20, 27.80s/it]677b6408-27e7-11f0-8aba-e10f5b0b7eea/Solution.java:19: error: array required, but Object found
        penguins.sort(Comparator.comparingInt(x -> Integer.parseInt(x[3])).reversed());
                                                                     ^
1 error
  6%|▌         | 9/149 [04:27<1:29:05, 38.18s/it]  7%|▋         | 10/149 [04:37<1:08:19, 29.50s/it]  7%|▋         | 11/149 [04:40<49:22, 21.46s/it]    8%|▊         | 12/149 [05:01<48:05, 21.06s/it]  9%|▊         | 13/149 [05:30<53:26, 23.58s/it]  9%|▉         | 14/149 [05:39<43:01, 19.13s/it] 10%|█         | 15/149 [06:42<1:12:26, 32.44s/it] 11%|█         | 16/149 [07:31<1:23:11, 37.53s/it] 11%|█▏        | 17/149 [07:39<1:02:54, 28.59s/it] 12%|█▏        | 18/149 [07:42<45:47, 20.97s/it]   13%|█▎        | 19/149 [08:02<44:25, 20.50s/it] 13%|█▎        | 20/149 [08:30<49:17, 22.92s/it] 14%|█▍        | 21/149 [08:39<39:44, 18.63s/it] 15%|█▍        | 22/149 [08:44<31:03, 14.67s/it] 15%|█▌        | 23/149 [09:03<33:05, 15.76s/it] 16%|█▌        | 24/149 [09:33<42:01, 20.17s/it] 17%|█▋        | 25/149 [09:53<41:27, 20.06s/it] 17%|█▋        | 26/149 [10:04<35:16, 17.21s/it] 18%|█▊        | 27/149 [10:39<46:09, 22.70s/it] 19%|█▉        | 28/149 [11:02<45:47, 22.71s/it] 19%|█▉        | 29/149 [11:43<56:16, 28.14s/it] 20%|██        | 30/149 [11:46<41:07, 20.73s/it] 21%|██        | 31/149 [12:05<40:00, 20.34s/it] 21%|██▏       | 32/149 [12:41<48:15, 24.74s/it] 22%|██▏       | 33/149 [13:03<46:20, 23.97s/it] 23%|██▎       | 34/149 [13:46<57:02, 29.76s/it] 23%|██▎       | 35/149 [13:50<41:42, 21.95s/it] 24%|██▍       | 36/149 [14:41<57:55, 30.75s/it] 25%|██▍       | 37/149 [14:53<46:55, 25.14s/it] 26%|██▌       | 38/149 [15:07<40:25, 21.85s/it] 26%|██▌       | 39/149 [15:44<48:17, 26.34s/it] 27%|██▋       | 40/149 [16:02<43:10, 23.77s/it] 28%|██▊       | 41/149 [16:44<52:29, 29.16s/it] 28%|██▊       | 42/149 [17:43<1:08:29, 38.41s/it] 29%|██▉       | 43/149 [18:03<57:59, 32.83s/it]   30%|██▉       | 44/149 [19:05<1:12:24, 41.37s/it] 30%|███       | 45/149 [20:04<1:21:12, 46.85s/it] 31%|███       | 46/149 [21:07<1:28:51, 51.77s/it] 32%|███▏      | 47/149 [22:11<1:34:14, 55.43s/it] 32%|███▏      | 48/149 [23:06<1:33:05, 55.30s/it] 33%|███▎      | 49/149 [24:08<1:35:22, 57.23s/it] 34%|███▎      | 50/149 [25:06<1:34:48, 57.46s/it] 34%|███▍      | 51/149 [25:11<1:07:51, 41.54s/it] 35%|███▍      | 52/149 [26:10<1:15:58, 46.99s/it] 36%|███▌      | 53/149 [26:15<54:53, 34.31s/it]   36%|███▌      | 54/149 [27:08<1:03:14, 39.95s/it] 37%|███▋      | 55/149 [27:13<45:55, 29.32s/it]   38%|███▊      | 56/149 [28:12<59:17, 38.26s/it] 38%|███▊      | 57/149 [28:21<45:17, 29.54s/it] 39%|███▉      | 58/149 [29:15<55:48, 36.80s/it] 40%|███▉      | 59/149 [29:20<41:14, 27.49s/it] 40%|████      | 60/149 [30:15<52:52, 35.65s/it] 41%|████      | 61/149 [30:19<38:19, 26.14s/it] 42%|████▏     | 62/149 [31:15<50:56, 35.13s/it] 42%|████▏     | 63/149 [31:23<38:25, 26.80s/it] 43%|████▎     | 64/149 [32:17<49:42, 35.09s/it] 44%|████▎     | 65/149 [32:20<35:27, 25.33s/it] 44%|████▍     | 66/149 [33:19<49:10, 35.55s/it] 45%|████▍     | 67/149 [33:23<35:49, 26.21s/it] 46%|████▌     | 68/149 [34:16<46:05, 34.15s/it] 46%|████▋     | 69/149 [34:20<33:17, 24.97s/it] 47%|████▋     | 70/149 [34:25<25:16, 19.20s/it] 48%|████▊     | 71/149 [35:25<40:35, 31.23s/it] 48%|████▊     | 72/149 [36:25<51:21, 40.02s/it] 49%|████▉     | 73/149 [37:16<54:40, 43.17s/it] 50%|████▉     | 74/149 [37:25<41:27, 33.17s/it] 50%|█████     | 75/149 [37:29<30:00, 24.33s/it] 51%|█████     | 76/149 [38:27<41:39, 34.24s/it] 52%|█████▏    | 77/149 [38:30<30:03, 25.06s/it] 52%|█████▏    | 78/149 [39:32<42:42, 36.09s/it] 53%|█████▎    | 79/149 [40:16<44:50, 38.43s/it] 54%|█████▎    | 80/149 [40:31<36:06, 31.40s/it] 54%|█████▍    | 81/149 [41:19<41:13, 36.37s/it] 55%|█████▌    | 82/149 [41:35<33:40, 30.15s/it] 56%|█████▌    | 83/149 [42:16<36:44, 33.40s/it] 56%|█████▋    | 84/149 [42:36<31:53, 29.44s/it] 57%|█████▋    | 85/149 [43:16<34:46, 32.60s/it] 58%|█████▊    | 86/149 [43:36<30:18, 28.87s/it] 58%|█████▊    | 87/149 [44:39<40:35, 39.28s/it] 59%|█████▉    | 88/149 [45:17<39:30, 38.85s/it] 60%|█████▉    | 89/149 [45:37<33:15, 33.26s/it] 60%|██████    | 90/149 [46:19<35:05, 35.69s/it] 61%|██████    | 91/149 [46:43<31:01, 32.10s/it] 62%|██████▏   | 92/149 [47:25<33:31, 35.29s/it] 62%|██████▏   | 93/149 [47:41<27:31, 29.49s/it] 63%|██████▎   | 94/149 [48:44<36:13, 39.51s/it] 64%|██████▍   | 95/149 [49:19<34:16, 38.08s/it] 64%|██████▍   | 96/149 [49:50<31:44, 35.92s/it] 65%|██████▌   | 97/149 [50:21<30:00, 34.63s/it] 66%|██████▌   | 98/149 [50:49<27:39, 32.53s/it] 66%|██████▋   | 99/149 [54:22<1:12:15, 86.71s/it] 67%|██████▋   | 100/149 [56:27<1:20:04, 98.05s/it] 68%|██████▊   | 101/149 [57:20<1:07:40, 84.59s/it] 68%|██████▊   | 102/149 [58:21<1:00:38, 77.42s/it] 69%|██████▉   | 103/149 [59:22<55:33, 72.48s/it]   70%|██████▉   | 104/149 [1:00:28<52:59, 70.66s/it] 70%|███████   | 105/149 [1:01:29<49:44, 67.82s/it] 71%|███████   | 106/149 [1:02:33<47:42, 66.56s/it] 72%|███████▏  | 107/149 [1:03:25<43:34, 62.25s/it] 72%|███████▏  | 108/149 [1:03:39<32:35, 47.70s/it] 73%|███████▎  | 109/149 [1:04:28<32:05, 48.14s/it] 74%|███████▍  | 110/149 [1:04:32<22:40, 34.88s/it] 74%|███████▍  | 111/149 [1:05:37<27:55, 44.09s/it] 75%|███████▌  | 112/149 [1:06:31<29:01, 47.08s/it] 76%|███████▌  | 113/149 [1:06:38<20:58, 34.95s/it] 77%|███████▋  | 114/149 [1:07:35<24:13, 41.53s/it] 77%|███████▋  | 115/149 [1:07:39<17:08, 30.25s/it] 78%|███████▊  | 116/149 [1:08:35<20:56, 38.06s/it] 79%|███████▊  | 117/149 [1:08:41<15:06, 28.34s/it] 79%|███████▉  | 118/149 [1:09:36<18:46, 36.33s/it] 80%|███████▉  | 119/149 [1:09:41<13:28, 26.95s/it] 81%|████████  | 120/149 [1:10:36<17:10, 35.54s/it] 81%|████████  | 121/149 [1:10:41<12:12, 26.17s/it] 82%|████████▏ | 122/149 [1:11:38<16:01, 35.61s/it] 83%|████████▎ | 123/149 [1:11:43<11:20, 26.18s/it] 83%|████████▎ | 124/149 [1:12:41<14:59, 35.97s/it] 84%|████████▍ | 125/149 [1:12:46<10:37, 26.57s/it] 85%|████████▍ | 126/149 [1:13:44<13:47, 35.99s/it] 85%|████████▌ | 127/149 [1:13:47<09:35, 26.17s/it] 86%|████████▌ | 128/149 [1:14:43<12:18, 35.15s/it] 87%|████████▋ | 129/149 [1:14:48<08:41, 26.05s/it] 87%|████████▋ | 130/149 [1:15:44<11:04, 34.98s/it] 88%|████████▊ | 131/149 [1:15:49<07:50, 26.12s/it] 89%|████████▊ | 132/149 [1:16:46<09:58, 35.23s/it] 89%|████████▉ | 133/149 [1:17:01<07:45, 29.12s/it] 90%|████████▉ | 134/149 [1:17:47<08:34, 34.28s/it] 91%|█████████ | 135/149 [1:17:51<05:54, 25.31s/it] 91%|█████████▏| 136/149 [1:18:51<07:43, 35.68s/it] 92%|█████████▏| 137/149 [1:18:56<05:15, 26.28s/it] 93%|█████████▎| 138/149 [1:19:53<06:30, 35.46s/it] 93%|█████████▎| 139/149 [1:20:52<07:07, 42.74s/it] 94%|█████████▍| 140/149 [1:20:56<04:39, 31.03s/it] 95%|█████████▍| 141/149 [1:21:58<05:21, 40.21s/it] 95%|█████████▌| 142/149 [1:22:46<04:58, 42.58s/it] 96%|█████████▌| 143/149 [1:22:57<03:18, 33.15s/it] 97%|█████████▋| 144/149 [1:23:02<02:04, 24.82s/it] 97%|█████████▋| 145/149 [1:24:01<02:20, 35.11s/it] 98%|█████████▊| 146/149 [1:25:08<02:13, 44.60s/it] 99%|█████████▊| 147/149 [1:26:02<01:34, 47.47s/it] 99%|█████████▉| 148/149 [1:26:06<00:34, 34.27s/it]100%|██████████| 149/149 [1:27:06<00:00, 41.99s/it]100%|██████████| 149/149 [1:27:06<00:00, 35.08s/it]
Accuracy - 0.959731543624161
